--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "next": "9.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.7.6",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.4.6"
   }
 }
